--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@mediapipe/camera_utils": "^0.3.1620247984",
+    "@mediapipe/hands": "^0.3.1620248595",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@tensorflow/tfjs": "^3.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,7 +18,9 @@
     "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-webcam": "^5.2.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
