--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ihearu-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Checkmate-2.github.io/IHearU-client",
+  "homepage": "https://Checkmate-2.github.io/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
