--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ihearu-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Checkmate-2.github.io/",
+  "homepage": "https://ihearu.ml/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -18,11 +18,12 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "gh-pages": "^3.2.3",
-    "google-tts-api": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-simple-typewriter": "^3.0.0",
+    "react-typewriter": "^0.4.1",
     "react-webcam": "^5.2.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
