remove custom domain

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ihearu-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ihearu.ml/",
+  "homepage": "https://Checkmate-2.github.io/IHearU-client",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -43,10 +43,10 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts --openssl-legacy-provider --no-experimental-fetch start",
+    "build": "react-scripts --openssl-legacy-provider --no-experimental-fetch build",
+    "test": "react-scripts --openssl-legacy-provider --no-experimental-fetch test",
+    "eject": "react-scripts --openssl-legacy-provider --no-experimental-fetch eject"
   },
   "eslintConfig": {
     "extends": [
